ztb-front/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ztb-front-app-service
spec:
  type: NodePort
  selector:
    app: ztb-front-app
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 80
    nodePort: 32200
