ztb-front/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ztb-front-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ztb-front-app.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ztb-front-app-service
            port:
              number: 8083
